--- a/composer.json
+++ b/composer.json
@@ -16,34 +16,39 @@
         }
     ],
     "require": {
-        "php": ">=7.2.9",
-        "illuminate/support": "5.8.*",
-        "illuminate/database": "5.8.*",
-        "illuminate/pagination": "5.8.*",
-        "illuminate/events": "5.8.*",
-        "illuminate/console": "5.8.*",
-        "heydavid713/neo4jphp": "0.1.*",
-        "nesbot/carbon": "~1.0",
-        "doctrine/dbal": "^2.6",
-        "dragonmantank/cron-expression": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "guzzlehttp/guzzle": "^6.0",
-        "illuminate/filesystem": "5.8.*",
-        "moontoast/math": "^1.1",
-        "ramsey/uuid": "^3.7",
+        "php": ">=7.3.0",
+        "doctrine/dbal": "*",
+        "dragonmantank/cron-expression": "*",
+        "fzaninotto/faker": "*",
+        "guzzlehttp/guzzle": "*",
+        "heydavid713/neo4jphp": "*",
+        "illuminate/console": "6.0.*",
+        "illuminate/database": "6.0.*",
+        "illuminate/events": "6.0.*",
+        "illuminate/filesystem": "6.0.*",
+        "illuminate/pagination": "6.0.*",
+        "illuminate/support": "6.0.*",
+        "moontoast/math": "*",
+        "nesbot/carbon": "*",
+        "ramsey/uuid": "*",
         "symfony/config": "*",
         "symfony/event-dispatcher": "*",
         "symfony/lock": "*",
         "symfony/process": "*",
-        "symfony/var-dumper": "^4.1",
+        "symfony/var-dumper": "*",
         "symfony/yaml": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0",
-        "mockery/mockery": "1.0"
+        "mockery/mockery": "*",
+        "phpunit/phpunit": "*"
     },
-    "repositories": [
-    ],
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Vinelab\\NeoEloquent\\NeoEloquentServiceProvider"
+            ]
+        }
+    },
     "autoload": {
         "psr-4": {
             "Vinelab\\NeoEloquent\\": "src"
@@ -54,12 +59,7 @@
             "tests/TestCase.php"
         ]
     },
-    "minimum-stability": "stable",
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Vinelab\\NeoEloquent\\NeoEloquentServiceProvider"
-            ]
-        }
-    }
+    "repositories": [],
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
