--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
         "fzaninotto/faker": "*",
         "guzzlehttp/guzzle": "*",
         "heydavid713/neo4jphp": "*",
-        "illuminate/console": "6.0.*",
-        "illuminate/database": "6.0.*",
-        "illuminate/events": "6.0.*",
-        "illuminate/filesystem": "6.0.*",
-        "illuminate/pagination": "6.0.*",
-        "illuminate/support": "6.0.*",
+        "illuminate/console": "5.8.*|^6.0",
+        "illuminate/database": "5.8.*|^6.0",
+        "illuminate/events": "5.8.*|^6.0",
+        "illuminate/filesystem": "5.8.*|^6.0",
+        "illuminate/pagination": "5.8.*|^6.0",
+        "illuminate/support": "5.8.*|^6.0",
         "moontoast/math": "*",
         "nesbot/carbon": "*",
         "ramsey/uuid": "*",
